# agemon

./: Cargo.toml  README.md  flake.nix  grafana-dashboard.json  justfile
.github/workflows/: build.yml
src/: main.rs
