[package]
name = "agemon"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive", "env"] }
hostname = "0.4.1"
miette = { version = "7.6.0", features = ["fancy"] }
prometheus_remote_write = "0.2.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sysinfo = "0.37.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
